# cit-to-ia

./: .gitignore  README.md  pyproject.toml
cit_to_ia/: __main__.py  main.py  schemas.py  utils.py
